<resources>
    <string name="app_name">RawDroid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="positive">Accept</string>
    <string name="negative">Decline</string>
    <string name="neutral">Cancel</string>
    <string name="DecodeAll">Decode All</string>
    <string name="file">File</string>
    <string name="save_as">Save JPEG</string>
    <string name="export">Export</string>
    <string name="wallpaper">Set as wallpaper</string>
    <string name="edit">Edit with...</string>
    <string name="multi_select">Multi-Select</string>
    <string name="selectAll">Select All</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="view_tag">Tag</string>
    <string name="menu_exit">Exit</string>
    <string name="button_Recent">Recent</string>
    <string name="lastUsedFolder">Last Used Folder</string>
    <string name="accessDenied">Access denied</string>
    <string name="grid_reset">Reset Image</string>
    <string name="bad_source">Source file could not be found</string>
    <string name="rename">Rename</string>
    <string name="format_prompt">Format</string>
    <string name="save">Save</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed</string>
    <string name="no_filemanager_installed">No file manager</string>
    <string name="contact">Contact</string>
    <string-array name="format_array">
        <item>Custom Name - Sequence</item>
        <item>Custom Name (x of y)</item>
        
    </string-array>
    <string name="Date">Date</string>
    <string name="Name">Name</string>
    <string name="settings">Settings</string>
    <string name="importKeywords">Import Keywords</string>
    <string name="importImages">Import Images</string>
    <string name="moveImages">Move Images</string>
    <string name="chooseDestination">Choose Destination</string>
    <string name="choosefile">Choose File</string>
    <string name="import1">Import</string>
    <string name="all">ALL</string>
    <string name="selected">SELECTED</string>
    <string name="renameImages">Rename Images</string>
    <string name="view">View</string>
    <string name="gallery">Gallery</string>
    <string name="viewer">Viewer</string>
    <string name="image">Image</string>
    <string name="storage">Storage</string>
    <string name="firstImage">First Image</string>
    <string name="lastImage">Last Image</string>
    <string name="licensed">Licensed</string>
    <string name="unlicensed">Unlicensed</string>
    <string name="error">Error</string>
    <string name="match">Match</string>
    <string name="errorKeywordRequired">Invalid keyword file</string>
    <string name="altitude">Altitude</string>
    <string name="aperture">Aperture</string>
    <string name="dimensions">Dimensions</string>
    <string name="driveMode">Drive Mode</string>
    <string name="expMode">Exp. Mode</string>
    <string name="expProgram">Exp. Program</string>
    <string name="exposure">Exposure</string>
    <string name="flash">Flash</string>
    <string name="focalLength">Focal Length</string>
    <string name="iso">ISO</string>
    <string name="latitude">Latitude</string>
    <string name="lens">Lens</string>
    <string name="longitude">Longitude</string>
    <string name="model">Model</string>
    <string name="whiteBalance">White Balance</string>
    <string name="metadata">Metadata</string>
    <string name="tutorial">Tutorial</string>
    <string name="resultImportSuccessful">Import successful.</string>
    <string name="resultImportFailed">Import failed.</string>
    <string name="resultDeleteSucceded">Selected images deleted successfully.</string>
    <string name="resultWallpaperFailed">Failed to set wallpaper.</string>
    <string name="warningNoFolderDecoded">You have not decoded a folder yet.</string>
    <string name="warningFileWrongFormat">File is not the correct format.</string>
    <string name="warningNoItemsSelected">No items selected.</string>
    <string name="warningInvalidPath">Path no longer available, restarting...</string>
    <string name="warningNotEnoughSpace">Not enough space to import entire folder.</string>
    <string name="warningSourceEqualsDestination">Cannot import into same directory.</string>
    <string name="warningDeleteExceedsRecycle">Deleted file exceeds recycle bin size.  Delete permanently?  (Note: Size can be edited in settings)</string>
    <string name="warningRecycleMtp">Recycle bin does not support usb at this time.  Delete is permanent.</string>
    <string name="warningDeleteDirect">Files will be deleted directly.</string>
    <string name="warningNoRecycleBin">Recycle bin does not exist. Files will be deleted directly.</string>
    <string name="warningGenericImagesOff">Generic images (ex: jpg) have been disabled in settings.</string>
    <string name="warningInvalidMeta">Invalid metadata (Please email offending file).</string>
    <string name="warningInvalidLabel">is an invalid label.  Labels can be customized in settings.</string>
    <string name="warningInvalidSidebar">Sidebar instance has become invalid, please reopen.</string>
    <string name="warningNoUSB">No usb media found.  If you know the device is mounted, please email rawdroid@anthonymandra.com with the location for addition.</string>
    <string name="warningFailedToGetStream">Warning: Failed to get image stream.  If this continues please email:rawdroid@anthonymandra.com</string>
    <string name="warningShareFail">Share could not be completed.</string>
    <string name="warningBlankWatermark">You tried to apply an empty watermark.  Please add text.</string>
    <string name="warningKitKat">Unfortunately your device is running Android 4.4+.  Google disabled writing to sdcards in this version.  There are two options to continue using sdcards:\n1:Use an external card reader.\n2:Root your device to fix it.\n\nWithout a fix you CANNOT edit, save or create metadata on sdcards.</string>
    <string name="warningWriteDisabled">You have selected a folder that has write access disabled.</string>
    <string name="warningWriteDisabledKitKat">You have selected a folder that has write access disabled.  Google disabled sdcard write access in Android 4.4.</string>
    <string name="warningAccessError">Access Error</string>
    <string name="prefTitleImageInterface">Automatically display interface</string>
    <string name="prefSummaryImageInterface">when image changes</string>
    <string name="prefTitleRecycleBin">Recycle Bin Size</string>
    <string name="prefSummaryRecycleBin">Space allocated to recycle bin (Default: 50MB, Min: 30MB, Max: 500MB)\nBe careful with size, 500MB is over 6% of an 8GB device!</string>
    <string name="prefTitleFilter">Exif Filter</string>
    <string name="prefTitleComingSoon">Coming Soon</string>
    <string name="prefTitleDeleteConfirmation">Delete Confirmation</string>
    <string name="prefSummaryDeleteConfirmation">If disabled deletes will not require confirmation even if they exceed recycle bin size.</string>
    <string name="prefTitleUseRecycleBin">Use Recycle Bin</string>
    <string name="prefSummaryUseRecycleBin">When disabled images will be directly deleted.</string>
    <string name="prefTitleShowXmpFiles">Show XMP Files</string>
    <string name="prefSummaryShowXmpFiles">This will show xmp sidecar files in the gallery.</string>
    <string name="prefTitleShowNativeFiles">Show Generic Images</string>
    <string name="prefSummaryShowNativeFiles">This will show jpg, gif, bmp, and png.</string>
    <string name="prefTitleShowUnknownFiles">Show Unhandled Files</string>
    <string name="prefSummaryShowUnknownFiles">This will show files that RawDroid does not process.</string>
    <string name="prefTitleImportKeywords">Import Keywords</string>
    <string name="prefSummaryImportKeywords">Click to import a tab-delimited keyword file, such as that exported from Lightroom.</string>
    <string name="prefTitleClearGalleryCache">Clear Gallery Cache</string>
    <string name="prefSummaryClearGalleryCache">Click to clear the gallery thumbnail cache.</string>
    <string name="prefTitleUseLegacyViewer">Use Legacy Viewer</string>
    <string name="prefSummaryUseLegacyViewer">Check only if you experience issues with the default viewer.\nPlease email me if this is necessary.</string>
    <string name="prefTitleShowNav">Show Navigation</string>
    <string name="prefTitleShowMeta">Show Metadata</string>
    <string name="prefTitleShowHist">Show Histogram</string>
    <string name="prefTitleShowToolbar">Show Toolbar</string>
    <string name="prefSummaryLicenseError">There was an error communicating with Google servers.  Make sure you are connected and try again later.</string>
    <string name="prefSummaryLicenseModified">Application was modified!  Uninstall apps designed to crack licensing.  There are also reports of some ad blocking software making modifications.  You may need to reinstall afterwards.</string>
    <string name="prefSummaryLicense">All features are available.  Thank you for your support!</string>
    <string name="prefTitleManualLicense">Check License</string>
    <string name="prefSummaryManualLicense">Click to manually check the license.  Requires an internet connection.</string>
    <string name="prefTitleEnableWatermark">Enable Watermark</string>
    <string name="prefSummaryEnableWatermark">Enable to place watermark on exported photos.</string>
    <string name="prefTitleWatermarkText">Watermark Text</string>
    <string name="prefTitleWatermarkSize">Watermark Size</string>
    <string name="prefSummaryWatermarkSize">This is the pixel size of the text as opposed to a font size.\nFor large images this should be > 100.</string>
    <string name="prefTitleWatermarkLocation">Location of Watermark</string>
    <string name="prefTitleWatermarkAlpha">Watermark Transparency</string>
    <string name="prefSummaryContact">Click to send me an email.</string>
    <string name="prefTitleLeftMargin">Left</string>
    <string name="prefTitleRightMargin">Right</string>
    <string name="prefTitleTopMargin">Top</string>
    <string name="prefTitleBottomMargin">Bottom</string>
    <string name="prefSummaryLeftMargin">Distance from left edge of image to left edge of watermark.</string>
    <string name="prefSummaryRightMargin">Distance from right edge of image to right edge of watermark.</string>
    <string name="prefSummaryTopMargin">Distance from top edge of image to top edge of watermark.</string>
    <string name="prefSummaryBottomMargin">Distance from bottom edge of image to bottom edge of watermark.</string>
    <string name="prefTitleUseImmersive">Use Immersive</string>
    <string name="prefSummaryUseImmersive">(Android 4.4+) Hide nav and status bars until swiped in.</string>
    <string name="buypro">Click here to upgrade to Rawdroid Pro to unlock features and improve speed!</string>
    <string-array name="showOptions">
        <item>Automatic</item>
        <item>Always</item>
        <item>Never</item>
    </string-array>
    <string-array name="watermarkLocations">
        <item>Center</item>
        <item>Lower Left</item>
        <item>Lower Right</item>
        <item>Upper Left</item>
        <item>Upper Right</item>
    </string-array>
    <string name="clearCache">Clear Thumbnail Cache</string>
    <string name="cacheCleared">Gallery image cache cleared.</string>
    <string name="accessRecycle">Access Recycle Bin</string>
    <string name="recycleBin">Recycle Bin</string>
    <string name="restoreFile">Restore File</string>
    <string name="shareWith">Share with…</string>
    <string name="clear">Clear</string>
    <string name="reuse">Reuse</string>
    <string name="customKeywords">Custom Keywords</string>
    <string name="about">About</string>
    <string name="usb">Find USB Mount</string>
    <string name="margins">Margins</string>
</resources>