<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="XMP" >
        <Preference
            android:key="prefKeyImportKeywords"
            android:summary="@string/prefSummaryImportKeywords"
            android:title="@string/prefTitleImportKeywords" />
        <EditTextPreference
            android:icon="@drawable/button_red"
            android:key="prefKeyXmpRed"
            android:defaultValue="Red"
            android:title="Red"
            android:summary="@string/prefAutoSummary"/>
        <EditTextPreference
            android:icon="@drawable/button_blue"
            android:key="prefKeyXmpBlue"
            android:defaultValue="Blue"
            android:title="Blue"
            android:summary="@string/prefAutoSummary"/>
        <EditTextPreference
            android:icon="@drawable/button_green"
            android:key="prefKeyXmpGreen"
            android:defaultValue="Green"
            android:title="Green"
            android:summary="@string/prefAutoSummary"/>
        <EditTextPreference
            android:icon="@drawable/button_yellow"
            android:key="prefKeyXmpYellow"
            android:defaultValue="Yellow"
            android:title="Yellow"
            android:summary="@string/prefAutoSummary"/>
        <EditTextPreference
            android:icon="@drawable/button_purple"
            android:key="prefKeyXmpPurple"
            android:defaultValue="Purple"
            android:title="Purple"
            android:summary="@string/prefAutoSummary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefTitleFilter" >
        <CheckBoxPreference
            android:key="prefKeyExifAperture"
            android:title="@string/aperture"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifAltitude"
            android:title="@string/altitude"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifDate"
            android:title="@string/Date"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifDimensions"
            android:title="@string/dimensions"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifDriveMode"
            android:title="@string/driveMode"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifExposure"
            android:title="@string/exposure"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifExposureMode"
            android:title="@string/expMode"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifExposureProgram"
            android:title="@string/expProgram"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifFocal"
            android:title="@string/focalLength"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifFlash"
            android:title="@string/flash"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifName"
            android:title="@string/Name"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifLatitude"
            android:title="@string/latitude"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifLens"
            android:title="@string/lens"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifLongitude"
            android:title="@string/longitude"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="prefKeyExifModel"
            android:title="@string/model"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifIso"
            android:title="@string/iso"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="prefKeyExifWhiteBalance"
            android:title="@string/whiteBalance"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>