<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/viewer" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefKeyUseImmersive"
            android:summary="@string/prefSummaryUseImmersive"
            android:title="@string/prefTitleUseImmersive" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefKeyShowImageInterface"
            android:summary="@string/prefSummaryImageInterface"
            android:title="@string/prefTitleImageInterface" />
        <ListPreference
            android:defaultValue="Automatic"
            android:key="prefKeyShowNav"
            android:title="@string/prefTitleShowNav"
            android:summary="@string/prefAutoSummary"
            android:entries="@array/showOptions"
            android:entryValues="@array/showOptionsValues" />
        <ListPreference
            android:defaultValue="Automatic"
            android:key="prefKeyShowMeta"
            android:title="@string/prefTitleShowMeta"
            android:summary="@string/prefAutoSummary"
            android:entries="@array/showOptions"
            android:entryValues="@array/showOptionsValues"/>
        <ListPreference
            android:defaultValue="Automatic"
            android:key="prefKeyShowHist"
            android:title="@string/prefTitleShowHist"
            android:summary="@string/prefAutoSummary"
            android:entries="@array/showOptions"
            android:entryValues="@array/showOptionsValues"/>
        <ListPreference
            android:defaultValue="Always"
            android:key="prefKeyShowToolbar"
            android:title="@string/prefTitleShowToolbar"
            android:summary="@string/prefAutoSummary"
            android:entries="@array/showOptions"
            android:entryValues="@array/showOptionsValues"/>
    </PreferenceCategory>

</PreferenceScreen>