<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
         <item
        android:id="@+id/view_ratings"
        android:actionLayout="@layout/rating_bar"
        android:icon="@drawable/important"
        android:showAsAction="always"
        android:title="@string/rating"/>
    <item
        android:id="@+id/viewColorKey"
        android:actionLayout="@layout/color_key"
        android:icon="@drawable/important"
        android:showAsAction="always"
        android:title="@string/rating"/>
    -->
    <item
        android:id="@+id/view_recycle"
        android:orderInCategory="27"
        android:icon="@drawable/recycle"
        app:showAsAction="ifRoom"
        android:title="@string/accessRecycle"/>
    <item
        android:id="@+id/view_edit"
        android:orderInCategory="13"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"
        android:title="@string/edit"/>
    <item
        android:id="@+id/view_delete"
        android:orderInCategory="11"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/view_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="21"
        app:showAsAction="ifRoom"
        android:title="@string/save_as"/>
    <item
        android:id="@+id/view_wallpaper"
        android:orderInCategory="27"
        app:showAsAction="never"
        android:title="@string/wallpaper"/>
    <item
        android:id="@+id/view_tag"
        android:orderInCategory="12"
        android:icon="@drawable/ic_action_labels"
        app:showAsAction="always"
        android:title="@string/view_tag"/>
    <item android:title="@string/help"
        android:orderInCategory="40">
        <menu>
            <item
                android:id="@+id/contact"
                android:icon="@android:drawable/ic_menu_send"
                android:orderInCategory="31"
                app:showAsAction="never"
                android:title="@string/contact"/>
            <item
                android:id="@+id/about"
                android:icon="@android:drawable/ic_menu_search"
                android:orderInCategory="34"
                app:showAsAction="never"
                android:title="@string/about"/>
        </menu>
    </item>
    <item
        android:id="@+id/settings"
        android:orderInCategory="49"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"
        android:title="@string/settings"/>
    <item
        android:id="@+id/viewShare"
        android:orderInCategory="14"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always"
        android:title="@string/shareWith"/>

</menu>