<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:treeView="http://schemas.android.com/apk/lib/pl.polidea.treeview"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="3dp" >

        <include
            android:id="@+id/colorKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/color_key" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stepSize="1" />

        <com.anthonymandra.widget.MultiSpinner
            android:id="@+id/multiSpinnerKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/testArray"
            android:prompt="@string/customKeywords" />

        <LinearLayout
            android:id="@+id/linearLayoutXmpButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/buttonReuseXmp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reuse" />
        </LinearLayout>
    </LinearLayout>

    <pl.polidea.treeview.TreeViewList
        android:id="@+id/keywordTreeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:smoothScrollbar="true"
        treeView:collapsible="true"
        treeView:indent_width="10dp"
        treeView:indicator_gravity="right|center_vertical" >
    </pl.polidea.treeview.TreeViewList>

</LinearLayout>