<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:treeView="http://schemas.android.com/apk/lib/pl.polidea.treeview"
    android:id="@+id/RelativeLayout1"
    android:layout_width="256dp"
    android:layout_height="match_parent"
    android:background="@color/Transparent_Black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutXmpButtons"
        android:orientation="vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <include
            android:id="@+id/colorKey"
            layout="@layout/color_key" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stepSize="1" >
        </RatingBar>

        <com.anthonymandra.widget.MultiSpinner
            android:id="@+id/multiSpinnerKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/testArray"
            android:prompt="@string/customKeywords" />

        <pl.polidea.treeview.TreeViewList
            android:id="@+id/keywordTreeView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:smoothScrollbar="true"
            treeView:collapsible="true"
            treeView:indent_width="10dp"
            treeView:indicator_gravity="right|center_vertical" >
        </pl.polidea.treeview.TreeViewList>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutXmpButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/buttonReuseXmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reuse" />

    </LinearLayout>

</RelativeLayout>